[package]
name = "sponwire"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
hyper = "1.7.0"
prometheus-client = "0.24.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["full"] }
