[package]
name = "sponwire"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
hyper = "1.8.1"
prometheus-client = "0.24.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50", features = ["full"] }
